--- a/tex/jrss-version/bib.bib
+++ b/tex/jrss-version/bib.bib
@@ -1611,3 +1611,13 @@
   year={1990},
   publisher={JSTOR}
 }
+@article{hines2022demystifying,
+  title={Demystifying statistical learning based on efficient influence functions},
+  author={Hines, Oliver and Dukes, Oliver and Diaz-Ordaz, Karla and Vansteelandt, Stijn},
+  journal={The American Statistician},
+  volume={76},
+  number={3},
+  pages={292--304},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
